--- a/src/Calendar/Dates.css
+++ b/src/Calendar/Dates.css
@@ -25,6 +25,8 @@ tr td{
     font-weight: bolder;
     font-size: 24px;
     padding: 0 40px;
+    border-bottom: 1px solid magenta;
+    border-right: 1px solid magenta;
 }
 
 tr td h4{
